# terminus_core_python

./: .gitignore  README.md  changelog.md  pyproject.toml  todo.md
.windsurf/workflows/: update-changelog.md
scripts/: generate_version.py
src/tmns/: __init__.py
src/tmns/geo/: __init__.py  constants.py  datum.py  hdatum.py  ltp.py  projector.py  terrain.py
src/tmns/geo/coord/: __init__.py  bounds.py  crs.py  ecef.py  epsg.py  geographic.py  pixel.py  transformer.py  types.py  ups.py  utm.py  vdatum.py  web_mercator.py
src/tmns/geo/proj/: __init__.py  affine.py  base.py  factory.py  gcp.py  identity.py  rpc.py  tps.py
src/tmns/geo/terrain/: __init__.py  catalog.py  elevation_point.py  interpolation.py  manager.py
src/tmns/geo/terrain/source/: __init__.py  base.py  flat.py  geotiff.py
src/tmns/io/: kml.py
test/: __init__.py
test/data/terrain/: test_dem.tif
test/integration/: __init__.py
test/integration/geo/: __init__.py  test_coordinate_comparisons.py  test_gcp_simulator_projectors.py  test_projector_integration.py  test_terrain_integration.py
test/integration/geo/data/: gcps_bakersfield_100pts_neg90.json
test/unit/: __init__.py
test/unit/geo/: __init__.py  test_affine.py  test_coordinate.py  test_datum.py  test_gcp.py  test_identity.py  test_ltp.py  test_projector.py  test_rpc.py  test_terrain.py  test_tps.py
test/unit/geo/coord/: __init__.py  test_crs.py  test_ecef.py  test_epsg.py  test_geographic.py  test_hdatum.py  test_pixel.py  test_transformer.py  test_ups.py  test_utm.py  test_vdatum.py  test_web_mercator.py
test/unit/geo/proj/: test_affine.py  test_factory.py  test_identity.py  test_rpc.py  test_tps.py  test_warp_extent.py
test/unit/geo/terrain/source/: test_flat.py
test/unit/io/: test_kml.py
tools/: README.md  tmns_gcp_simulator.py
